--- a/.github/workflows/v8build.yml
+++ b/.github/workflows/v8build.yml
@@ -145,18 +145,19 @@ jobs:
       uses: actions/cache@v4
       with:
         path: ~/.ccache
-        key: libv8:ccache:${{ matrix.os }}:${{ matrix.arch }}:${{ hashFiles('deps/v8_hash') }}:${{ runner.os }}
+        key: libv8:ccache:${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:${{ needs.build_common.outputs.v8_hash }}:${{ hashFiles('deps/build.py', 'patches/*.patch') }}
         restore-keys: |
-          libv8:ccache:${{ matrix.os }}:${{ matrix.arch }}:
-          ${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:libv8:ccache
+          libv8:ccache:${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:${{ needs.build_common.outputs.v8_hash }}:
+          libv8:ccache:${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:
 
     - name: Restore V8 Build Cache
       uses: actions/cache@v4
       with:
-        path: deps/v8/build
-        key: libv8:v8build:${{ matrix.os }}:${{ matrix.arch }}:${{ hashFiles('deps/v8_hash') }}:${{ runner.os }}
+        path: deps/.build/${{ matrix.os }}_${{ matrix.arch }}
+        key: libv8:v8build:${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:${{ needs.build_common.outputs.v8_hash }}:${{ hashFiles('deps/build.py', 'patches/*.patch') }}
         restore-keys: |
-          libv8:v8build:${{ matrix.os }}:${{ matrix.arch }}:
+          libv8:v8build:${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:${{ needs.build_common.outputs.v8_hash }}:
+          libv8:v8build:${{ runner.os }}:${{ matrix.os }}:${{ matrix.arch }}:
 
     - name: Update depot_tools fetch config
       run: cd deps/depot_tools && git config --unset-all remote.origin.fetch; git config --add remote.origin.fetch +refs/heads/*:refs/remotes/origin/*
