Fix V8 submodule sync and generated cgo linker updates
Bump deps/* module versions in go.mod/go.sum to the new V8 artifact commit, include regenerated deps/*/cgo.go linker flags, and update v8build workflow commit globs so these generated files are committed automatically in future runs.

--- a/.github/workflows/v8build.yml
+++ b/.github/workflows/v8build.yml
@@ -243,7 +243,10 @@ jobs:
       with:
         add: |
           - cgo.go
+          - cgo_*.go
           - CHANGELOG.md
+          - deps/*_*/cgo.go
+          - deps/*_*/go.mod
           - deps/*_*/libv8*.a
           - deps/*_*/libmanifest
           - deps/include/**
