--- a/.github/workflows/fmt.yml
+++ b/.github/workflows/fmt.yml
@@ -17,6 +17,12 @@ jobs:
       with:
         fetch-depth: 1
 
+    - name: Set Up Workspace
+      # Submodules shouldn't cause a download.
+      run: |
+        set -o pipefail
+        go work init . $(ls ./deps/*_*/cgo.go | xargs -r dirname)
+
     - name: go fmt
       run: go fmt
 
