--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -44,6 +44,11 @@ jobs:
       with:
         go-version: ${{ matrix.go-version }}
 
+    - name: Install Clang and LLD
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y clang lld
+
     - name: Add GOPATH to GITHUB_ENV
       run: echo "GOPATH=$(go env GOPATH)" >>"$GITHUB_ENV"
 
@@ -59,6 +64,9 @@ jobs:
         go test -v -coverprofile coverage.out ./... || go test -v -coverprofile coverage.out ./...
       env:
         CGO_CXXFLAGS: "-Werror"
+        CC: clang
+        CXX: clang++
+        CGO_LDFLAGS: -fuse-ld=lld
 
     - name: Upload Coverage To Codecov
       uses: codecov/codecov-action@v3
